# sbxcloudpython

./: .gitignore  CLAUDE.md  LICENSE  QueryBuilder.py  README.md  SbxPy.py  meta.yaml  pyproject.toml  setup.py  test.py
.github/workflows/: python-publish.yml
docs/: DATES-QUERY-DSL.md  FIND-SELECT-AND-ARRAY-TYPE.md  client-parity-implementation-plan.md  data-module-parity-sprint-plan.md
sbxpy/: QueryBuilder.py  __init__.py  columns.py  timedsl.py
sbxpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sbxpy/domain/: __init__.py
sbxpy/sbx/: __init__.py
sbxpy/service/: __init__.py
scripts/: smoke_find_features.py
tests/: test_column_oriented.py  test_querybuilder.py  test_step.py
