[project]
name = "sbxpy"
version = "0.8.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "deepmerge>=2.0",
    "pydantic>=2.4.0",
    "redis>=5.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
